fix: brighten labels in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,13 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  .feedback-voting-container {
+    border-color: var(--fv-primary, #0073aa);
+  }
   .feedback-question,
   .feedback-no-text-box label,
   .feedback-thankyou {
-    color: #f1f1f1;
+    color: #f1f1f1 !important;
   }
 }
 
